<resources>
    <string name="app_name">VisionBlend</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="signed">signed</string>
    <string name="already_have_an_account_login">already_have_an_account_login</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_sign_in">don_t_have_an_account_sign_in</string>
    <string name="forgot_password">forgot_password</string>
    <string name="name">name</string>
    <string name="_1">1</string>
    <string name="_2">2</string>

    <string name="fruits_and_vegetables">Fruits and Vegetables</string>
    <string name="_3_deuteranopia_and_protanopia">3.Deuteranopia and Protanopia</string>
    <string name="_1_monochromatism">1.Monochromatism</string>
    <string name="_2_tritanopia">2.Tritanopia</string>
    <string name="visionblend">VisionBlend</string>
    <string name="visual_diabilities">Visual Diabilities</string>
    <string name="categories">Categories</string>

    <string name="Forgot_Password">Forgot password</string>
    <string name="don_t_have_an_account">don\'t have an account sign in</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="signup">Signup</string>
    <string name="notifications">Notifications</string>
    <string name="name_of_the_prodduct">Name of the prodduct</string>
    <string name="name_of_the_product">name of the product</string>
    <string name="rs">Rs :</string>
    <string name="item_image" />

</resources>