<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andriod="http://schemas.android.com/apk/res/android"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="201dp"
        android:orientation="vertical"
        android:backgroundTint="?attr/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441"
        >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="?attr/backgroundColor"
            android:text="Login" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="274dp"
            android:layout_height="23dp"
            android:layout_margin="15dp"
            android:backgroundTint="#8F3939"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:onClick="resetPassword"
            android:text="@string/forgot_password"
            android:textColor="#18206F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRedirectSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="don't have an account sign in"
            android:textColor="#18206F"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="176dp"
        app:layout_constraintEnd_toStartOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="#121111"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toStartOf="@+id/etEmailAddress"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_action_email"
        app:tint="#121111" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="172dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <!--    <Button-->
    <!--        android:id="@+id/btnLogin"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="15dp"-->
    <!--        android:background="@drawable/btn_primary"-->
    <!--        android:backgroundTint="#517C1F"-->

    <!--        android:text="@string/login"-->

    <!--        android:textColor="#0277BD"-->
    <!--        tools:ignore="VisualLintButtonSize"-->
    <!--        tools:layout_editor_absoluteX="13dp"-->
    <!--        tools:layout_editor_absoluteY="204dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>